gccida/c3/init_emit_once
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5421:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5422:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5424:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5425:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5426:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5427:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5428:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5429:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5434:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5438:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+20h] [rbp-90h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5444:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode double_mode; // [rsp+A0h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5445:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+A4h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5456:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode = VOIDmode; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5465:45: error: invalid suffix 'xmode' on integer constant
if ( mode_bitsize[mode] == v1 && *(short *)0xmode == VOIDmode ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5466:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode = mode; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5479:31: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
ptr_mode = mode_for_size( v2, mode_class_0[v3], 0); 
                              ^~~~~~~~~~~~
                              mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/emit-rtl.c:5529:24: error: too many arguments to function call, expected 2, have 3
ereal_atof( &v26, "0", double_mode); 
~~~~~~~~~~             ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/real.h:483:1: note: 'ereal_atof' declared here
extern REAL_VALUE_TYPE ereal_atof PARAMS ((const char *, enum machine_mode));
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_emit_once/src/obj/emit-rtl.o] Error 1
